# assign

./: README.md  pyproject.toml
src/: .env  global_run.py
src/assign/: __init__.py  global_run.py
